# xstudio

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
cmake/: macros.cmake
docs/: conf.py
docs/build_guides/: centos_7.md  macos_intel.md  rocky_linux_9_1.md  ubuntu_22_04.md
include/xstudio/: atoms.hpp
include/xstudio/audio/: audio_output.hpp  audio_output_actor.hpp  audio_output_device.hpp  linux_audio_output_device.hpp  windows_audio_output_device.hpp
include/xstudio/bookmark/: bookmark.hpp  bookmarks_actor.hpp
include/xstudio/broadcast/: broadcast_actor.hpp
include/xstudio/colour_pipeline/: colour_pipeline.hpp
include/xstudio/conform/: conform_manager_actor.hpp  conformer.hpp
include/xstudio/contact_sheet/: contact_sheet_actor.hpp
include/xstudio/embedded_python/: embedded_python.hpp  embedded_python_actor.hpp
include/xstudio/event/: event.hpp
include/xstudio/global/: global_actor.hpp
include/xstudio/global_store/: global_store.hpp
include/xstudio/media/: media.hpp  media_actor.hpp
include/xstudio/media_reader/: audio_buffer.hpp  buffer.hpp  image_buffer.hpp  image_buffer_set.hpp  media_reader.hpp
include/xstudio/module/: attribute.hpp  attribute_role_data.hpp  module.hpp  typed_attributes.hpp
include/xstudio/playhead/: enums.hpp  playhead.hpp  playhead_actor.hpp  playhead_global_events_actor.hpp  playhead_selection_actor.hpp  sub_playhead.hpp
include/xstudio/playlist/: playlist.hpp  playlist_actor.hpp
include/xstudio/plugin_manager/: enums.hpp  plugin_base.hpp
include/xstudio/session/: session.hpp  session_actor.hpp
include/xstudio/shotgun_client/: shotgun_client.hpp
include/xstudio/studio/: studio_actor.hpp
include/xstudio/subset/: subset_actor.hpp
include/xstudio/thumbnail/: thumbnail.hpp
include/xstudio/timeline/: clip.hpp  clip_actor.hpp  gap.hpp  gap_actor.hpp  item.hpp  item_actor.hpp  stack.hpp  stack_actor.hpp  timeline.hpp  timeline_actor.hpp  track.hpp  track_actor.hpp
include/xstudio/ui/: keyboard.hpp
include/xstudio/utility/: base_actor.hpp  caf_helpers.hpp  chrono.hpp  file_system_item.hpp  frame_list.hpp  frame_range.hpp  frame_rate.hpp  frame_rate_and_duration.hpp  helpers.hpp  json_store.hpp  lock_file.hpp  media_reference.hpp  sequence.hpp  string_helpers.hpp  time_cache.hpp  uuid.hpp
retired/qml/: qml.qrc
retired/qml/bars/: XsToolBar.qml
retired/qml/core/: XsGlobalPreferences.qml
retired/qml/menus/: XsSnapshotMenu.qml
retired/qml/overlays/: XsErrorFrameOverlay.qml
retired/qml/player/: XsLightPlayerWidget.qml  XsLightPlayerWindow.qml  XsPlayerWidget.qml
retired/qml/trays/: XsMediaToolsTray.qml
retired/qml/widgets/: XsTimelineDurationWidget.qml  XsTimelinePositionWidget.qml  XsVolumeWidget.qml
retired/shotgun/src/: data_source_shotgun.tcc  data_source_shotgun_action.tcc  data_source_shotgun_base.hpp  data_source_shotgun_definitions.hpp  data_source_shotgun_query_engine.cpp
share/preference/: core_audio.json  core_cache.json  core_playhead.json  core_plugin_manager.json  plugin_colour_pipeline_ocio.json  plugin_data_source_shotbrowser.json  plugin_data_source_shotgun.json  plugin_dneg_media_hook.json  plugin_grading.json  ui_qml.json  ui_viewport.json
share/snippets/DNeg/: export_flagged_clip_shots.py
src/: CMakeLists.txt
src/embedded_python/src/: CMakeLists.txt  embedded_python.cpp  embedded_python_actor.cpp
src/media/src/: media.cpp  (+4 more)
src/media_reader/src/: CMakeLists.txt  cacheing_media_reader_actor.cpp  frame_request_queue.cpp  media_detail_and_thumbnail_reader_actor.cpp  media_reader.cpp  media_reader_actor.cpp
src/plugin/media_reader/ffmpeg/src/: CMakeLists.txt  ffmpeg.cpp  ffmpeg.hpp  ffmpeg_decoder.cpp  ffmpeg_stream.cpp
src/plugin/media_reader/ffmpeg/src/opengl/: ffmpeg_pixel_unpack_shader.cpp  ffmpeg_pixel_unpack_shader.hpp
src/plugin/viewport_overlay/annotations/src/: CMakeLists.txt  annotation_opengl_renderer.cpp  annotations_tool.cpp  annotations_tool.hpp
src/plugin/viewport_overlay/annotations/src/qml/: CMakeLists.txt
src/plugin/viewport_overlay/annotations/src/qml/AnnotationsTool.2/: XsColourPresets.qml  XsDrawingTools.qml  XsToolActions.qml  XsToolProperties.qml  XsToolSelector.qml  anno_tools.qrc  qmldir
src/plugin/viewport_overlay/annotations/src/qml/AnnotationsTool.2/categories/: XsShapeCategories.qml  XsTextCategories.qml
src/plugin/viewport_overlay/annotations/src/qml/AnnotationsTool.2/dockedLR/: XsColourPresetsLR.qml  XsDrawingToolsLR.qml  XsShapeCategoriesLR.qml  XsTextCategoriesLR.qml  XsToolActionsLR.qml  XsToolDisplayLR.qml  XsToolPropertiesLR.qml  XsToolSelectorLR.qml
src/plugin/viewport_overlay/annotations/src/qml/AnnotationsTool.2/dockedTB/: XsColourPresetsTB.qml  XsDrawingToolsTB.qml  XsShapeCategoriesTB.qml  XsTextCategoriesTB.qml  XsToolActionsTB.qml  XsToolPropertiesTB.qml  XsToolSelectorTB.qml
src/timeline/src/: CMakeLists.txt  clip.cpp  clip_actor.cpp  gap.cpp  gap_actor.cpp  item.cpp  item_actor.cpp  stack.cpp  stack_actor.cpp  timeline.cpp  timeline_actor.cpp  track.cpp  track_actor.cpp
src/ui/opengl/src/: CMakeLists.txt  gl_debug_utils.cpp  no_image_shader_program.cpp  opengl_canvas_renderer.cpp  opengl_multi_buffered_texture.cpp  opengl_offscreen_renderer.cpp  opengl_rgba8bit_image_texture.cpp  opengl_shape_renderer.cpp  opengl_ssbo_image_texture.cpp  opengl_stroke_renderer.cpp  opengl_text_rendering.cpp  opengl_texture_base.cpp  opengl_viewport_renderer.cpp  shader_program_base.cpp  texture.cpp
src/ui/qml/viewport/src/: CMakeLists.txt  hotkey_ui.cpp  qml_viewport.cpp  qml_viewport_renderer.cpp
src/ui/qt/viewport_widget/src/: CMakeLists.txt  offscreen_viewport.cpp  offscreen_viewport_base.cpp  viewport_widget.cpp
src/ui/qt/viewport_widget/src/metal/: offscreen_viewport.cpp  viewport_widget.cpp
src/ui/qt/viewport_widget/src/opengl/: offscreen_viewport.cpp  viewport_widget.cpp
src/utility/src/: CMakeLists.txt  base_actor.cpp  broadcast_actor.cpp  chrono.cpp  edit_list.cpp  frame_list.cpp  frame_rate_and_duration.cpp  helpers.cpp  json_store_sync.cpp  media_reference.cpp  sequence.cpp
(+867 files in other folders)
