SET(LINK_DEPS
	${CAF_LIBRARY_core}
	Imath::Imath
	Qt6::Core
	Qt6::Qml
	Qt6::Quick
	Qt6::OpenGLWidgets
	xstudio::module
	xstudio::playhead
	xstudio::ui::opengl::viewport
	xstudio::ui::viewport
	xstudio::ui::qml::helper
	xstudio::utility
)

SET(EXTRAMOC
	"${ROOT_DIR}/include/xstudio/ui/qml/hotkey_ui.hpp"
	"${ROOT_DIR}/include/xstudio/ui/qml/qml_viewport.hpp"
	"${ROOT_DIR}/include/xstudio/ui/qml/qml_viewport_renderer.hpp"
)

find_package(Imath)

create_qml_component(viewport 0.1.0 "${LINK_DEPS}" "${EXTRAMOC}")
